--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def m_link(adj):\n",
+    "def crossover(parent1, parent2, cp):\n",
+    "    offspring = []\n",
+    "    for g in range(len(parent1)):\n",
+    "        if random.uniform(0,1) < cp :\n",
+    "            offspring.append(parent1[g])\n",
+    "        else : offspring.append(parent2[g])\n",
+    "    return offspring\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutation(individual):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Link Partition\n",
+    "def evaluate(individual):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def m_link(adj, lsp=0.5, cp=0.5, mp=0.5):\n",
     "    treePopulation = initializePopulation(adj)\n",
     "    evaluate(treePopulation)\n",
     "\n",
@@ -53,7 +88,7 @@
     "            else:\n",
     "                parent2 = farSelect(a)\n",
     "            \n",
-    "            offspring = crossover(parent1, parent2)\n",
+    "            offspring = crossover(parent1, parent2, cp)\n",
     "            mutate(offspring)\n",
     "\n",
     "            if (random.uniform(0,1) < lsp):\n",
@@ -63,30 +98,6 @@
     "            \n",
     "    overlappingCommunities = postProcessing(getBest(treePopulation))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crossover(parent1, parent2):\n",
-    "    offspring = []\n",
-    "    for g in range(len(parent1)):\n",
-    "        if random.uniform(0,1) < cp :\n",
-    "            offspring.append(parent1[g])\n",
-    "        else : offspring.append(parent2[g])\n",
-    "\n",
-    "def mutation(individual):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
